<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dashboardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="64dp"
        android:text="Trip at Poughkeepsie"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totalBudgetLabel"
        android:layout_width="160dp"
        android:layout_height="28dp"
        android:layout_marginTop="10dp"
        android:text="Total Budget:"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboardTitle" />

    <TextView
        android:id="@+id/totalBudget"
        android:layout_width="110dp"
        android:layout_height="28dp"
        android:layout_marginTop="10dp"
        android:text="100.00"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboardTitle" />

    <TextView
        android:id="@+id/budgetRemainingLabel"
        android:layout_width="160dp"
        android:layout_height="28dp"
        android:layout_marginTop="10dp"
        android:text="Budget Remaining:"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalBudgetLabel" />

    <TextView
        android:id="@+id/budgetRemaining"
        android:layout_width="110dp"
        android:layout_height="28dp"
        android:layout_marginTop="10dp"
        android:text="100.00"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalBudget" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tableMode"
        android:layout_width="410dp"
        android:layout_height="350dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/budgetRemainingLabel">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/expenseUserTagLabelButton"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/label_button"
            android:text="User Tag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/expenseTypeLabelButton"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:background="@drawable/label_button"
        android:text="Type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/budgetRemaining"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/expenseCostLabelButton"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:background="@drawable/label_button"
            android:text="Cost"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.65"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/expenseTimeLabelButton"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:background="@drawable/label_button"
            android:text="Time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/expenseRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="10dp"
            android:scrollbars="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expenseTimeLabelButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/newExpenseButton"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/label_button"
        android:text="New Expense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableMode" />


</androidx.constraintlayout.widget.ConstraintLayout>