<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.NavBarMenu">

    <!-- TODO: Update blank fragment layout -->

    <ImageButton
        android:id="@+id/allTripsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/title_new_trip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/currentTripButton"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_agenda"
        app:tint="#000000" />

    <ImageButton
        android:id="@+id/currentTripButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/title_current_trip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/allTripsButton"
        app:layout_constraintEnd_toStartOf="@+id/dashboardButton"
        app:srcCompat="@android:drawable/ic_menu_edit"
        app:tint="#000000" />

    <ImageButton
        android:id="@+id/dashboardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="Dashboard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/currentTripButton"
        app:layout_constraintEnd_toStartOf="@+id/friendsButton"
        android:src="@android:drawable/ic_menu_sort_by_size"
        app:tint="#000000" />

    <ImageButton
        android:id="@+id/friendsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/title_friends"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dashboardButton"
        app:srcCompat="@android:drawable/ic_menu_myplaces"
        app:tint="#000000" />

</androidx.constraintlayout.widget.ConstraintLayout>